HelloUltraviolet/Fixtures/RejectedSource/Expressions/TransmuteAlignMismatch/Expected.uv
//! Expected diagnostic metadata for the TransmuteAlignMismatch rejected-source specimen.

expectedDiagnostic("E-UNS-0104", "rule.16.T-Transmute-AlignEq")
